2012-02-03  Martin Baker <ax87438@martinb.com>
	    Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matcat.spad.pamphlet,
	src/algebra/rep1.spad.pamphlet: Add kroneckerProduct
	and kroneckerSum.

2012-02-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add Jacobi Zeta.

2012-01-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove depsys.
	* src/interp/primitives.lisp: move to
	src/lisp/primitives.lisp,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	move macros to src/lisp/primitives.lisp and
	src/lisp/fricas-lisp.lisp, remove useless macros.
	src/interp/buildom.boot, src/interp/bootlex.lisp,
	src/interp/br-con.boot, src/interp/br-op1.boot,
	src/interp/compiler.boot, src/interp/c-util.boot,
	src/interp/i-syscmd.boot, src/interp/lisplib.boot,
	src/interp/nrungo.boot, src/interp/spad.lisp.
	src/interp/trace.boot, src/interp/util.lisp,
	src/interp/Makefile.in, src/lisp/Makefile.in:
	Adjust.

2012-01-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-saturn.boot, src/interp/debug.lisp,
	src/interp/interop.boot, src/interp/macros.lisp,
	src/interp/ncomp.boot, src/interp/parsing.lisp
	file src/interp/setq.lisp: Minor cleanups.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/string.spad.pamphlet: Add 'newline'
	constant to 'Character'.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* br-con.boot: Document 'construct' in 'Record'.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/boolean.spad.pamphlet,
	src/interp/g-util.boot, src/interp/macros.lisp,
	src/interp/primitives.lisp, src/interp/scan.boot,
	src/interp/vmlisp.lisp: Misc cleanups.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/list.spad.pamphlet,
	src/interp/*: Remove not needed macros.

2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet,