@@ -1,4 +1,9 @@
-2012-02-03  Martin Baker <ax87438@martinb.com>
+2012-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/Makefile.in, src/interp/setq.lisp:
+	Inline operations from a few more domains.
+
+2012-02-04  Martin Baker <ax87438@martinb.com>
 	    Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/matcat.spad.pamphlet,
